# lock-free-wait-free-circularfifo

./: .hgignore  CMakeLists.txt  README.md  README.txt
g2utilities/: g2chrono.cpp  g2chrono.h  g2random.h  g2random.h.orig
src/: circularfifo_hazard_platform_dependent.hpp  circularfifo_memory_relaxed_aquire_release.hpp  circularfifo_memory_relaxed_aquire_release2.hpp  circularfifo_memory_relaxed_aquire_release_padded.hpp  circularfifo_memory_sequential_consistent.hpp  shared_queue.hpp
test/: test_functionality.cpp  test_main.cpp  test_threaded.cpp
